<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Couple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="invite_text">Invite your loved one to join you in Couple!</string>
    <string name="accept_invite_text">Enter your code below to accept an invitation!</string>
    <string name="invite_email_text">enter their email</string>
    <string name="accept_invite_text_hint">enter your code</string>
    <string name="invite_email_button_text">Send invitation</string>
    <string name="accept_invite_button_text">Accept invitation</string>
    <string name="title_activity_main">Registration</string>
    <string name="title_activity_invite">Invite your partner</string>
    <string name="title_section1">Chat Log</string>
    <string name="title_section2">Photos</string>
    <string name="title_activity_tab">Couple</string>
    <string name="title_activity_photo">Photo</string>
    <string name="title_camera_button">Camera</string>
    <string name="messagelabel">"From: "</string>
    <string name="timelabel">""</string>

</resources>
